Fix mobile header spacing

--- a/src/assets/style/cmps/_BookFilter.scss
+++ b/src/assets/style/cmps/_BookFilter.scss
@@ -1,5 +1,5 @@
 .book-filter {
-    padding-top: 10em;
+    padding-top: 8em;
     padding-bottom: 2em;
     & input {
         margin: 1em;
