--- a/src/assets/style/cmps/_ReviewAdd.scss
+++ b/src/assets/style/cmps/_ReviewAdd.scss
@@ -13,7 +13,7 @@
         background-color: #ffffff;
         position: absolute;
         left: calc(50vw - 25em/2);
-        top: calc(50vh - 10em);
+        top: calc(50vh - 8em);
         width: 25em;
         padding: 2em;
         
