--- a/src/assets/style/views/_BookAdd.scss
+++ b/src/assets/style/views/_BookAdd.scss
@@ -1,5 +1,5 @@
 .add-book {
-    padding-top: 10em;
+    padding-top: 8em;
     display: flex;
     flex-direction: column;
     align-items: center;
